snowy-server/snowy-xxl-job-app/k8s/overlays/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snowy-xxl-job-app-ingress
  namespace: infra
spec:
  ingressClassName: nginx
  rules:
  - host: xxl-job-test.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: snowy-xxl-job-app
            port:
              number: 9004
